--- a/pure_js_fcc/dragon fight game/style.css
+++ b/pure_js_fcc/dragon fight game/style.css
@@ -36,3 +36,11 @@ body {
     background-color: #c70d0d;
     display: none;
   }
+
+  button {
+    color: #0a0a23;
+    cursor: pointer;
+    border: 3px solid #feac32;
+    background-color: #feac32;
+    background-image: linear-gradient(#fecc4c , #ffac33);
+  }
